NetBSD Problem Report #39992

From root@devel5.precedence.co.uk  Fri Nov 21 09:55:38 2008
Return-Path: <root@devel5.precedence.co.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 46CA563B908
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 21 Nov 2008 09:55:38 +0000 (UTC)
Message-Id: <20081121100941.28FEA559C9@devel5.precedence.co.uk>
Date: Fri, 21 Nov 2008 10:09:41 +0000 (GMT)
From: netbsd@precedence.co.uk
Reply-To: netbsd@precedence.co.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: tar -C -T coredumps
X-Send-Pr-Version: 3.95

>Number:         39992
>Category:       bin
>Synopsis:       tar -tzf file.tgz -C path -T list core dumps
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    dholland
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 21 10:00:01 +0000 2008
>Closed-Date:    Sun Nov 23 22:49:28 +0000 2008
>Last-Modified:  Sun Nov 23 22:49:28 +0000 2008
>Originator:     Stephen Borrill
>Release:        NetBSD 5.0_BETA
>Organization:
Precedence Technologies Ltd
>Environment:


System: NetBSD devel5.precedence.co.uk 5.0_BETA NetBSD 5.0_BETA (XEN3_DOMU) #1: Mon Nov 17 11:18:55 GMT 2008 root@ugly:/usr/src/5.0/obj.i386/sys/arch/i386/compile/XEN3_DOMU i386
Architecture: i386
Machine: i386
>Description:
Run: tar -tzf file.tgz -C path -T list
This will core dump however this will not: tar -tzf -T list -C path
i.e. swap the -T and -C options
>How-To-Repeat:
devel5# mkdir a
devel5# touch a/b
devel5# echo a/b > list
devel5# tar -czf a.tgz a
devel5# mkdir out
devel5# tar -tzf a.tgz -C out -T list
Segmentation fault(core dumped)
devel5# tar -tzf a.tgz -T list -C out
a/b
>Fix:
Workaround is to ensure the -T option is before the -C option

>Release-Note:

>Audit-Trail:
From: Stephen Borrill <netbsd@precedence.co.uk>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/39992: tar -C -T coredumps
Date: Fri, 21 Nov 2008 10:45:51 +0000 (GMT)

 Actually, my workaround doesn't not work. The -C option is ignored and the 
 items are extracted in the current directory.

From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39992 CVS commit: src/bin/pax
Date: Sun, 23 Nov 2008 10:08:50 +0000 (UTC)

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Nov 23 10:08:50 UTC 2008

 Modified Files:
 	src/bin/pax: options.c

 Log Message:
 Don't pass strings from argv[] to free(). Fixes PR 39992.


 To generate a diff of this commit:
 cvs rdiff -r1.101 -r1.102 src/bin/pax/options.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: David Holland <dholland-bugs@netbsd.org>
To: Stephen Borrill <netbsd@precedence.co.uk>
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, gnats-bugs@netbsd.org
Subject: Re: bin/39992: tar -C -T coredumps
Date: Sun, 23 Nov 2008 10:10:03 +0000

 On Fri, Nov 21, 2008 at 10:50:04AM +0000, Stephen Borrill wrote:
  > From: Stephen Borrill <netbsd@precedence.co.uk>
  > To: gnats-bugs@NetBSD.org
  > Cc: 
  > Subject: Re: bin/39992: tar -C -T coredumps
  > Date: Fri, 21 Nov 2008 10:45:51 +0000 (GMT)
  > 
  >  Actually, my workaround doesn't not work. The -C option is ignored and the 
  >  items are extracted in the current directory.

 Judging from the code, that's a "feature" - the order is significant.

 -- 
 David A. Holland
 dholland@netbsd.org

State-Changed-From-To: open->pending-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 23 Nov 2008 10:17:05 +0000
State-Changed-Why:
pullup-5 #114


Responsible-Changed-From-To: bin-bug-people->dholland
Responsible-Changed-By: dholland@NetBSD.org
Responsible-Changed-When: Sun, 23 Nov 2008 10:17:40 +0000
Responsible-Changed-Why:
I fixed it.


From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39992 CVS commit: [netbsd-5] src/bin/pax
Date: Sun, 23 Nov 2008 21:26:50 +0000 (UTC)

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 23 21:26:50 UTC 2008

 Modified Files:
 	src/bin/pax [netbsd-5]: options.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #114):
 	bin/pax/options.c: revision 1.102
 Don't pass strings from argv[] to free(). Fixes PR 39992.


 To generate a diff of this commit:
 cvs rdiff -r1.101 -r1.101.12.1 src/bin/pax/options.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 23 Nov 2008 22:49:28 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.