Pull up following revision(s) (requested by dholland in ticket #114): 	bin/pax/options.c: revision 1.102 Don't pass strings from argv[] to free(). Fixes PR 39992.